Add laws and hello world program

--- a/message-client.fsproj
+++ b/message-client.fsproj
@@ -12,7 +12,9 @@
         <Content Include="message-client.psa" />
         <Compile Include="Program.fs" />
         <Content Include="test.psa" />
-        <Content Include="unify_test.psa" />
+        <Content Include="unify-test.psa" />
+        <Content Include="laws" />
+        <Content Include="hello-world.psa" />
     </ItemGroup>
 
 </Project>
